tree-sitter-gastro/test/corpus/basic.txt
================================================================================
Simple page with frontmatter and template
================================================================================

---
Title := "Hello"
---
<h1>{{ .Title }}</h1>

--------------------------------------------------------------------------------

(document
  (frontmatter_section
    (frontmatter_delimiter)
    (frontmatter)
    (frontmatter_delimiter))
  (template_body
    (html_content)
    (template_expression)
    (html_content)))

================================================================================
Self-closing component
================================================================================

---
---
<Card Title={.Name} />

--------------------------------------------------------------------------------

(document
  (frontmatter_section
    (frontmatter_delimiter)
    (frontmatter_delimiter))
  (template_body
    (component_self_closing
      (component_name)
      (component_prop
        (prop_name)
        (prop_expression)))
    (html_content)))

